--- a/src/app/shared/layouts/main/main.component.html
+++ b/src/app/shared/layouts/main/main.component.html
@@ -2,13 +2,12 @@
         <mat-sidenav class="sidenav" #sidenav mode="side" opened="true">
           
           <label><h3>Menu</h3></label>
-          <div class="sidenav">
-              <ul>
-                <li><a routerLink="/">One</a></li>
-                <li><a routerLink="/">Two</a></li>
-                <li><a routerLink="/">One</a></li>
-              </ul>
-          </div>
+            <div class="sidenav">
+              <a href="#">About</a>
+              <a href="#">Services</a>
+              <a href="#">Clients</a>
+              <a href="#">Contact</a>
+            </div>
         </mat-sidenav>
 
         <mat-toolbar color="primary">
