--- a/src/app/shared/layouts/main/main.component.scss
+++ b/src/app/shared/layouts/main/main.component.scss
@@ -8,17 +8,20 @@
 }
 
 .sidenav a {
-    font-size: 16px;
+    padding: 8px 8px 8px 32px;
     text-decoration: none;
-    color: black;
-    margin-top: 20px;
-    
-}
+    font-size: 18px;
+    color: rgb(20, 20, 20);
 
-* {
-    list-style: none;
-    text-decoration: none;
-}
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidenav a:hover {
+    
+    color: black;
+  }  
+
 
 
 h3 {
