--- a/src/app/shared/layouts/main/main.component.html
+++ b/src/app/shared/layouts/main/main.component.html
@@ -1,50 +1,9 @@
 <mat-sidenav-container style="height: 100vh;">
-        <mat-sidenav class="sidenav" #sidenav mode="side" opened="true">
-          
-          <label><h3>Menu</h3></label>
-            <div class="sidenav">
-              <a href="#">About</a>
-              <a href="#">Services</a>
-              <a href="#">Clients</a>
-              <a href="#">Contact</a>
-            </div>
-        </mat-sidenav>
 
-        <mat-toolbar color="primary">
-            <a mat-button><mat-icon (click)="sidenav.toggle()">menu</mat-icon></a>
-            <span style="flex-grow: 1;"></span>
-            
-            <button mat-icon-button >
-              <mat-icon>search</mat-icon>
-            </button>
-            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                <mat-icon>face</mat-icon>
-              </button>
-              <mat-menu #menu="matMenu">
-                <button mat-menu-item>
-                  <mat-icon>account_box</mat-icon>
-                  <span>Profile</span>
-                </button>
-                <button mat-menu-item >
-                  <mat-icon>mail</mat-icon>
-                  <span>Mail Box</span>
-                </button>
-                <button mat-menu-item>
-                  <mat-icon>notifications_off</mat-icon>
-                  <span>Disable alerts</span>
-                </button>
-                <button mat-menu-item >
-                    <mat-icon>settings</mat-icon>
-                    <span>Settings</span>
-                  </button>
-                <button mat-menu-item>
-                    <mat-icon>exit_to_app</mat-icon>
-                    <span>Log Out</span>
-                  </button>
-              </mat-menu>
-              
+        <app-sidenav></app-sidenav>
 
-        </mat-toolbar>
+        <app-topnav></app-topnav>
 
     <router-outlet></router-outlet>  
+
 </mat-sidenav-container>
