--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -1,2 +1,12 @@
 <p>sidenav works!</p>
+<mat-sidenav class="sidenav" #sidenav mode="side" opened="true">
+          
+    <label><h3>Menu</h3></label>
+      <div class="sidenav">
+        <a href="#" routerLink="/analitica">Analitica</a>
+        <a href="#" routerLink="/default">Default</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+      </div>
+  </mat-sidenav>
 
