--- a/src/app/shared/topnav/topnav.component.html
+++ b/src/app/shared/topnav/topnav.component.html
@@ -1,7 +1,42 @@
 
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
     <a mat-button routerLink="/admin" style="text-transform: uppercase; font-size: 20px; margin-left: 0;"><mat-icon>menu</mat-icon></a>
     <span style="flex-grow: 1;"></span>
     <button mat-button routerLink="/">ГЛАВНАЯ</button>
     
+</mat-toolbar> -->
+<mat-toolbar color="primary">
+    <a mat-button><mat-icon (click)="sidenav.toggle()">menu</mat-icon></a>
+    <span style="flex-grow: 1;"></span>
+    
+    <button mat-icon-button >
+      <mat-icon>search</mat-icon>
+    </button>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>face</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>account_box</mat-icon>
+          <span>Profile</span>
+        </button>
+        <button mat-menu-item >
+          <mat-icon>mail</mat-icon>
+          <span>Mail Box</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>notifications_off</mat-icon>
+          <span>Disable alerts</span>
+        </button>
+        <button mat-menu-item >
+            <mat-icon>settings</mat-icon>
+            <span>Settings</span>
+          </button>
+        <button mat-menu-item>
+            <mat-icon>exit_to_app</mat-icon>
+            <span>Log Out</span>
+          </button>
+      </mat-menu>
+      
+
 </mat-toolbar>
